deps/v8/test/message/regress/regress-4829-1.out
# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:7: SyntaxError: Invalid hexadecimal escape sequence
tag(tag`\xyy`);
        ^^^^
SyntaxError: Invalid hexadecimal escape sequence
